<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_step3" >

            <TextView
                android:id="@+id/renameTitle"
                style="@style/Typography_Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/properties" />

            <TextView
                style="@style/Typography_Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_step3"
                android:text="@string/file_name"
                android:textColor="@color/typography_color_caption"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/properite_filename"
                style="@style/Typography_Subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_step1"
                android:gravity="center_vertical"
                android:text="@string/file_name_1"
                android:textColor="@color/typography_color_text" />

            <TextView
                style="@style/Typography_Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_step3"
                android:text="@string/path"
                android:textColor="@color/typography_color_caption"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/properite_path"
                style="@style/Typography_Subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_step1"
                android:gravity="center_vertical"
                android:text="@string/path_1"
                android:textColor="@color/typography_color_text" />

            <TextView
                style="@style/Typography_Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_step3"
                android:text="@string/size"
                android:textColor="@color/typography_color_caption"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/properite_size"
                style="@style/Typography_Subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_step1"
                android:gravity="center_vertical"
                android:text="@string/0mb"
                android:textColor="@color/typography_color_text" />
            
            <TextView
                style="@style/Typography_Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_step3"
                android:text="@string/permission"
                android:textColor="@color/typography_color_caption"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/properite_permission"
                style="@style/Typography_Subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_step1"
                android:gravity="center_vertical"
                android:text="@string/read_and_write"
                android:textColor="@color/typography_color_text" />

            <TextView
                style="@style/Typography_Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_step3"
                android:text="@string/modified"
                android:textColor="@color/typography_color_caption"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/properite_modified"
                style="@style/Typography_Subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_step1"
                android:gravity="center_vertical"
                android:text="@string/modified_1"
                android:textColor="@color/typography_color_text" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:layout_marginBottom="@dimen/padding_step2"
        android:layout_marginRight="@dimen/padding_step2"
        android:gravity="right|center_vertical" >

        <Button
            android:id="@+id/properite_buttonCancel"
            style="?android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:paddingLeft="@dimen/padding_step2"
            android:paddingRight="@dimen/padding_step2"
            android:text="@string/big_cancel"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>
