<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ViewAnimator
        android:id="@+id/switcher"
        android:layout_width="wrap_content"
        android:layout_height="96dp"
        android:paddingTop="48dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone" >

        <RelativeLayout
            android:id="@+id/topBar0Main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/toolbar" >

            <TextView
                android:id="@+id/docNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/linkButton"
                android:paddingLeft="16dp"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/linkButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/reflowButton"
                android:background="@drawable/button"
                android:contentDescription="@string/toggle_links"
                android:src="@drawable/ic_link" />

            <ImageButton
                android:id="@+id/reflowButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/outlineButton"
                android:background="@drawable/button"
                android:contentDescription="@string/toggle_reflow_mode"
                android:src="@drawable/ic_reflow" />

            <ImageButton
                android:id="@+id/outlineButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/searchButton"
                android:background="@drawable/button"
                android:contentDescription="@string/outline_title"
                android:src="@drawable/ic_list" />

            <ImageButton
                android:id="@+id/searchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/moreButton"
                android:background="@drawable/button"
                android:contentDescription="@string/search_document"
                android:src="@drawable/ic_magnifying_glass" />

            <ImageButton
                android:id="@+id/moreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button"
                android:contentDescription="@string/more"
                android:onClick="OnMoreButtonClick"
                android:src="@drawable/ic_more" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/topBar1Search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/toolbar" >

            <ImageButton
                android:id="@+id/cancelSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button"
                android:contentDescription="@string/cancel"
                android:onClick="OnCancelSearchButtonClick"
                android:src="@drawable/ic_cancel" />

            <EditText
                android:id="@+id/searchText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/searchBack"
                android:layout_toRightOf="@+id/cancelSearch"
                android:background="@drawable/search"
                android:hint="@string/search"
                android:inputType="text"
                android:singleLine="true" />

            <ImageButton
                android:id="@+id/searchBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/searchForward"
                android:background="@drawable/button"
                android:contentDescription="@string/search_backwards"
                android:src="@drawable/ic_arrow_left" />

            <ImageButton
                android:id="@+id/searchForward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button"
                android:contentDescription="@string/search_forwards"
                android:src="@drawable/ic_arrow_right" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/topBar2Annot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/toolbar" >

            <ImageButton
                android:id="@+id/cancelAnnotButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button"
                android:contentDescription="@string/cancel"
                android:onClick="OnCancelAnnotButtonClick"
                android:src="@drawable/ic_cancel" />

            <ImageButton
                android:id="@+id/highlightButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/underlineButton"
                android:background="@drawable/button"
                android:contentDescription="@string/highlight"
                android:onClick="OnHighlightButtonClick"
                android:src="@drawable/ic_highlight" />

            <ImageButton
                android:id="@+id/underlineButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/strikeOutButton"
                android:background="@drawable/button"
                android:contentDescription="@string/underline"
                android:onClick="OnUnderlineButtonClick"
                android:src="@drawable/ic_underline" />

            <ImageButton
                android:id="@+id/strikeOutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/inkButton"
                android:background="@drawable/button"
                android:contentDescription="@string/strike_out"
                android:onClick="OnStrikeOutButtonClick"
                android:src="@drawable/ic_strike" />

            <ImageButton
                android:id="@+id/inkButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button"
                android:contentDescription="@string/ink"
                android:onClick="OnInkButtonClick"
                android:src="@drawable/ic_pen" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/topBar3Delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/toolbar" >

            <ImageButton
                android:id="@+id/cancelDeleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button"
                android:contentDescription="@string/cancel"
                android:onClick="OnCancelDeleteButtonClick"
                android:src="@drawable/ic_cancel" />

            <TextView
                android:id="@+id/deleteLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/deleteButton"
                android:layout_toRightOf="@+id/cancelDeleteButton"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/delete"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button"
                android:contentDescription="@string/delete"
                android:onClick="OnDeleteButtonClick"
                android:src="@drawable/ic_trash" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/topBar4More"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/toolbar" >

            <ImageButton
                android:id="@+id/cancelMoreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button"
                android:contentDescription="@string/cancel"
                android:onClick="OnCancelMoreButtonClick"
                android:src="@drawable/ic_cancel" />

            <ImageButton
                android:id="@+id/printButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/copyTextButton"
                android:background="@drawable/button"
                android:contentDescription="@string/print"
                android:onClick="OnPrintButtonClick"
                android:src="@drawable/ic_print" />

            <ImageButton
                android:id="@+id/copyTextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignWithParentIfMissing="true"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/editAnnotButton"
                android:background="@drawable/button"
                android:contentDescription="@string/copy_text_to_the_clipboard"
                android:onClick="OnCopyTextButtonClick"
                android:src="@drawable/ic_clipboard" />

            <ImageButton
                android:id="@+id/editAnnotButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button"
                android:contentDescription="@string/edit_annotations"
                android:onClick="OnEditAnnotButtonClick"
                android:src="@drawable/ic_annotation" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/topBar5Accept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/toolbar" >

            <ImageButton
                android:id="@+id/cancelAcceptButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button"
                android:contentDescription="@string/cancel"
                android:onClick="OnCancelAcceptButtonClick"
                android:src="@drawable/ic_cancel" />

            <TextView
                android:id="@+id/annotType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/acceptButton"
                android:layout_toRightOf="@+id/cancelAcceptButton"
                android:gravity="center"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/acceptButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button"
                android:contentDescription="@string/accept"
                android:onClick="OnAcceptButtonClick"
                android:src="@drawable/ic_check" />
        </RelativeLayout>
    </ViewAnimator>

    <LinearLayout
        android:id="@+id/lowerMenus"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottombar_height"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_lowerbutton"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="invisible" >

        <ImageView
            android:id="@+id/showOutlineAction"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:src="@drawable/ic_action_outline" />

        <SeekBar
            android:id="@+id/pageSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:paddingBottom="0dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="0dp"/>

        <TextView
            android:id="@+id/pageNumber"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="100 / 100"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <!-- <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/page_num"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF" /> -->

</RelativeLayout>